--- a/kursy/package.json
+++ b/kursy/package.json
@@ -10,19 +10,22 @@
   "dependencies": {
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.5.12",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "git": "^0.1.5",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-loader": "^16.8.3"
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.21.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "vue-loader": "^16.8.3",
+    "webpack": "^5.76.0",
+    "webpack-cli": "^5.1.4"
   },
   "eslintConfig": {
     "root": true,
