--- a/kursy/docker-compose.yml
+++ b/kursy/docker-compose.yml
@@ -1,23 +1,23 @@
+version: '3'
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
     ports:
       - "5000:5000"
     environment:
-      MONGO_URL: mongodb://mongo:27017/kursy
+      - MONGO_URL=mongodb://mongo:27017/kursy
     depends_on:
       - mongo
-    volumes:
-      - ./backend:/app
 
   frontend:
-    build: ./src
+    build:
+      context: ./frontend
+    command: npm run serve # Uruchamia Vue.js w trybie developerskim
     ports:
       - "8080:8080"
     depends_on:
       - backend
-    volumes:
-      - ./src:/app
 
   mongo:
     image: mongo
